--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1307,12 +1307,27 @@ th {
     
     .btn {
         color: #000;
-        font-size: 16px;
+        font-size: 15px;
         font-weight: bold;
         background: #fff;
         border: 1px solid #cdcdcd;
-        padding: 15px;
+        padding: 7px 15px;
         border-radius: 5px;
         text-decoration: none;
+    }
+    height: 1000px;
+    overflow: auto;
+}
+.passenger-list{
+    li{
+        padding: 5px 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .removePassenger{
+        padding: 2px;
+        border: 0;
+        background-color: #fff;
     }
 }
