--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1309,11 +1309,17 @@ th {
     .content_titulo{
         padding: 20px;
         background: #f15a76;
+        text-align:center;
+        font-weight: 600;
+        font-size: 20px;
         text-align:center
     }
     .content_titulo_pagos{
         padding: 25px;
         background: #7abda4;
+        text-align:center;
+        font-weight: 600;
+        font-size: 20px;
         text-align:center
     }
     .content_titulo_pasajeros{
