Feat Voucher: Adicionando opção de envio por email

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1139,6 +1139,9 @@ th {
                 }
             }
         }
+        td {
+            padding: 12px;
+        }
     }
 }
 .danger-row {
