--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1149,6 +1149,9 @@ th {
     border: 0;
   }
 }
+.logistica tbody td {
+  padding: 12px;
+}
 
 .danger-row {
   background-color: #fd0000 !important;
