--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1063,7 +1063,6 @@ th {
 .table td {
   font-size: 12px;
   vertical-align: middle;
-  border-left: 1px solid #ffffff;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1253,6 +1252,7 @@ th {
   }
 }
 .modal-pagos-full {
+  width: 1080px;
   height: 1000px;
   overflow: auto;
 }
