Feat Login: Ajustando lógica para usar o nome de usuário para login

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1251,6 +1251,18 @@ th {
     margin-top: 15px;
   }
 }
+@media screen and (max-width: 769px) {
+  .desktop_viajes {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .mobile_viajes {
+    display: block;
+  }
+}
+
 .modal-pagos-full {
   width: 1080px;
   height: 1000px;
