Feat Cliente: Criando area de login para o cliente ver o voucher

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1139,7 +1139,8 @@ th {
             }
         }
         td {
-            padding: 12px;
+            padding: 8x;
+            text-align: center;
         }
     }
 }
