Feat Cliente: Criando area de login para o cliente ver o voucher

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1139,7 +1139,7 @@ th {
             }
         }
         td {
-            padding: 8x;
+            padding: 12px;
             text-align: center;
         }
     }
