Feat Cliente: Criando area de login para o cliente ver o voucher

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1403,4 +1403,15 @@ th {
   background-color: #fff;
 }
 
+.btn-viajes {
+  padding: 5px !important;
+  margin-bottom: 5px;
+}
+@media screen and (max-width: 769px) {
+  .btn-viajes {
+    margin-bottom: 0px;
+    width: 100%;
+  }
+}
+
 /*# sourceMappingURL=app.css.map */
