--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -99,6 +99,7 @@ table {
         img{
             width: 364px;
             width: 364px;
+            border-radius: 100%;
         }
         h1{
             color: $branco;
@@ -1387,7 +1388,7 @@ th {
     }
 }
 .btn-viajes{
-    padding: 5px !important;
+    padding: 5px;
     margin-bottom: 5px;
     @media screen and (max-width: 769px) {
         margin-bottom: 0px;
